--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>bienvenidos a git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tempora sed dicta, eum modi sit nihil? Assumenda reiciendis et recusandae!</p>
     
 </body>
 </html>
