--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>bienvenidos a git</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tempora sed dicta, eum modi sit nihil? Assumenda reiciendis et recusandae!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, sunt?</p>
     
 </body>
 </html>
