--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>bienvenidos a git</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tempora sed dicta, eum modi sit nihil? Assumenda reiciendis et recusandae!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, sunt?</p>
-    
+    <p>Lorem, ipsum.</p>
 </body>
 </html>
