--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tempora sed dicta, eum modi sit nihil? Assumenda reiciendis et recusandae!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, sunt?</p>
     <p>Lorem, ipsum.</p>
+    <section>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, at.
+    </section>
 </body>
 </html>
