--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <section>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, at.
     </section>
+    <ul>
+        <li>lista</li>
+    </ul>
 </body>
 </html>
